# betting_software_test_work

./: README.md  docker-compose.yml  setupDB.sh
.github/workflows/: build.yml  deploy.yml  tests.yml
etc/nginx/: nginx.conf
etc/nginx/conf.d/: app.conf
src/: .env  Dockerfile  exceptions.py  main.py  pyproject.toml  responses.py  utils.py
src/api/: base.py
src/core/: .env  config.py  logger.py
src/db/: abstract_adapter.py  mongo_adapter.py
src/models/: base.py
src/services/: base_service.py
