[tool.poetry]
name = "betting_software_test_work"
version = "0.1.0"
description = ""
authors = ["undergroundenemy616 <undergroundenemy616@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
orjson = "^3.6.7"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
python-decouple = "^3.6"
alembic = "^1.7.7"
FastAPI-SQLAlchemy = "^0.2.1"
isort = "^5.10.1"
flake8 = "^4.0.1"
fastapi-utils = "^0.2.1"
motor = "^2.5.1"
backoff = "^1.11.1"
pymy = "^0.0.8"
mypy = "^0.941"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
